# min-lang

./: CLAUDE.MD  COMPILER_ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_ROADMAP.md  LANGUAGE_SPEC.md  LICENSE  LSP_DESIGN.md  README.md  TECHNICAL_SPECS.md
crates/min-db/: Cargo.toml
crates/min-db/src/: lib.rs  tests.rs
crates/min-diagnostics/: Cargo.toml
crates/min-diagnostics/src/: lib.rs
crates/min-hir/: Cargo.toml
crates/min-hir/src/: check.rs  hir.rs  lib.rs  lower.rs
crates/min-hir/tests/: type_check_tests.rs
crates/min-syntax/: Cargo.toml
crates/min-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/min-syntax/tests/: error_recovery_tests.rs  integration_tests.rs  separator_and_docs_tests.rs
crates/min-types/: Cargo.toml
crates/min-types/src/: lib.rs  ty.rs
